force-app/main/default/objects/TW1_Inspection_Item__c/TW1_Inspection_Item__c.object-meta.xml
<CustomObject>
    <label>Inspection Item</label>
    <nameField>
        <displayFormat>Item-{000000}</displayFormat>
        <label>Inspection Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>