force-app/main/default/objects/TW1_Inspection_Item__c/fields/Rejected_Item__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Item__c</fullName>
    <formula>IF(ISPICKVAL(TW1_Status__c,&quot;Rejected&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected Item</label>
    <type>Checkbox</type>
</CustomField>