force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>TW1_All_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Approved</label>
    <type>Checkbox</type>
</CustomField>