force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Heat_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Heat_Number__c</fullName>
    <label>Heat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>