force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Inspection_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Appraisal__c</fullName>
    <label>Inspection Appraisal</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>