force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Item_Description__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>