force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Previous_Status__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>