force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TW1_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>