force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW1_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TW1_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Out of Specification</fullName>
            </value>
            <value>
                <fullName>PO Divergence</fullName>
            </value>
            <value>
                <fullName>Non-presentation of the Item</fullName>
            </value>
            <value>
                <fullName>Notification less than 24 hours</fullName>
            </value>
            <value>
                <fullName>IRF Canceled</fullName>
                <label>IRF Canceled/Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>