force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Request__c</fullName>
    <label>Request</label>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Inspection Items</relationshipLabel>
    <relationshipName>Inspection_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>