force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Previously Inspected</fullName>
            </value>
            <value>
                <fullName>Approved with Restriction</fullName>
            </value>
            <value>
                <fullName>Approved by OM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>