force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW1_Tag_or_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Tag_or_Certificate_Number__c</fullName>
    <inlineHelpText>In case of Inspection in parts/spools, the tag must be inserted in this field</inlineHelpText>
    <label>Tag or Certificate Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>