force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_Conclusion_Date_OM_Approval__c.field-meta.xml
<CustomField>
    <fullName>TW5_Conclusion_Date_OM_Approval__c</fullName>
    <label>Conclusion Date - OM Approval</label>
    <type>DateTime</type>
</CustomField>