force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_Isometric_Drawing__c.field-meta.xml
<CustomField>
    <fullName>TW5_Isometric_Drawing__c</fullName>
    <label>Isometric / Drawing Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>