force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_OM_Approval__c.field-meta.xml
<CustomField>
    <fullName>TW5_OM_Approval__c</fullName>
    <label>OM Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>