force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_OM_Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW5_OM_Approval_Reason__c</fullName>
    <label>OM Approval Reason</label>
    <type>TextArea</type>
</CustomField>