force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_OM_Approver__c.field-meta.xml
<CustomField>
    <fullName>TW5_OM_Approver__c</fullName>
    <label>OM Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>