force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_PO_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>TW5_PO_Item_Number__c</fullName>
    <inlineHelpText>You have to insert a maximum of 5 characters.</inlineHelpText>
    <label>PO Item Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>