force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_Related_Request__c.field-meta.xml
<CustomField>
    <fullName>TW5_Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TW1_Request__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inspection</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Inspection Items (Related Request)</relationshipLabel>
    <relationshipName>Inspection_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>