force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_TQ_MOC__c.field-meta.xml
<CustomField>
    <fullName>TW5_TQ_MOC__c</fullName>
    <label>TQ/MOC</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TW1_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>