force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_TQ_MOC_Observation__c.field-meta.xml
<CustomField>
    <fullName>TW5_TQ_MOC_Observation__c</fullName>
    <label>TQ/MOC Observation</label>
    <length>500</length>
    <type>Html</type>
</CustomField>