force-app/main/default/objects/TW1_Inspection_Item__c/fields/TW5_TQ_MOC_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW5_TQ_MOC_Reason__c</fullName>
    <label>TQ/MOC Reason</label>
    <type>TextArea</type>
</CustomField>