force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/CantChangeInspItemAfterSendInsp.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeInspItemAfterSendInsp</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR(
ISCHANGED( TW1_Item_Description__c ) , ISCHANGED( TW1_Quantity__c ), ISCHANGED( TW1_Heat_Number__c ), ISCHANGED(  TW1_Tag_or_Certificate_Number__c  )
),
 NOT(ISPICKVAL(TW1_Request__r.TW1_Inspection_Status__c, &apos;Not Submitted&apos; ))   
)</errorConditionFormula>
    <errorMessage>You cannot change an Inspection Item after send Inspection.</errorMessage>
</ValidationRule>