force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/CantCreateInspItemWithoutInspStatuNotSub.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateInspItemWithoutInspStatuNotSub</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(), NOT(ISPICKVAL(  TW1_Request__r.TW1_Inspection_Status__c  , &apos;Not Submitted&apos;)))</errorConditionFormula>
    <errorMessage>You can&apos;t create a new Inspection Item if the Inspection was already sent.</errorMessage>
</ValidationRule>