force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/CantCreateMoreThan10InspItem.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateMoreThan10InspItem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 (TW1_Request__r.TW1_Count_Inspection_Items__c  &gt;= 10)
)</errorConditionFormula>
    <errorMessage>Can&apos;t create more than 10 Inspection Item.</errorMessage>
</ValidationRule>