force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/CantRejectItemWOInspAppraisal.validationRule-meta.xml
<ValidationRule>
    <fullName>CantRejectItemWOInspAppraisal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( TW1_Status__c , &quot;Rejected&quot;),
ISNULL( TW1_Inspection_Appraisal__c )
)</errorConditionFormula>
    <errorMessage>You can&apos;t give this Item a rejected result without filling the field Inspection Appraisal.</errorMessage>
</ValidationRule>