force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/CantSendItemResultStatusDifInspSched.validationRule-meta.xml
<ValidationRule>
    <fullName>CantSendItemResultStatusDifInspSched</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL( TW1_Request__r.TW1_Status__c , &apos;Canceled&apos;)), 
ISCHANGED( TW1_Status__c ),
NOT((ISPICKVAL(TW1_Request__r.TW1_Inspection_Status__c, &quot;Inspection Scheduled&quot;)) 
),
				NOT( ISPICKVAL( TW1_Status__c , &quot;Approved by OM&quot;)) 
)</errorConditionFormula>
    <errorMessage>You can&apos;t give this Item a result if this request is not under Inspection.</errorMessage>
</ValidationRule>