force-app/main/default/objects/TW1_Inspection_Item__c/validationRules/IfTQMOCYesFillTQMOCReason.validationRule-meta.xml
<ValidationRule>
    <fullName>IfTQMOCYesFillTQMOCReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(TW5_TQ_MOC__c  , &quot;Yes&quot;),  
  ISBLANK( TW5_TQ_MOC_Reason__c )
)</errorConditionFormula>
    <errorMessage>If this item has TQ/MOC, you have to fill TQ/MOC Reason.</errorMessage>
</ValidationRule>